--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="white37">#5EFFFFFF</color>
 
     <color name="sky_blue">#01999a</color>
     <color name="sky_blue_one">#009b9d</color>
@@ -310,6 +311,7 @@
     <color name="orange_A200">#FFAB40</color>
     <color name="orange_A400">#FF9100</color>
     <color name="orange_A700">#FF6D00</color>
+    <color name="orange_A800">#FF8C00</color>
 
     <color name="grey_50">#FAFAFA</color>
     <color name="grey_100">#F5F5F5</color>
@@ -367,4 +369,5 @@
 
     <color name="colorBackTab">#202330</color>
     <color name="colorBackHome">#191A1F</color>
+    <color name="colorHintTex">#4E586E</color>
 </resources>
