--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -6,7 +6,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".dashboard.DashboardActivity">
+        tools:context=".user.dashboard.DashboardActivity">
 
         <RelativeLayout
             android:id="@+id/viewDashboard"
