--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -371,4 +371,6 @@
     <color name="colorBackHome">#191A1F</color>
     <color name="colorHintTex">#4E586E</color>
     <color name="colorBlackText">#242A37</color>
+    <color name="colorOptionText">#F54B64</color>
+    <color name="colorBlackTrans">#7D000000</color>
 </resources>
