--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -33,6 +33,7 @@
             android:layout_weight="1"/>
 
         <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvUserProfileDone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/done"
@@ -58,25 +59,66 @@
             android:orientation="vertical"
             android:padding="@dimen/_12sdp">
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/imgUserProfile"
-                android:layout_width="@dimen/_160sdp"
-                android:layout_height="@dimen/_160sdp"
-                android:src="@drawable/place_holder"
-                android:layout_gravity="center_horizontal"/>
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/imgUserCoverPhoto"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_180sdp"
+                    android:src="@drawable/place_holder"
+                    android:scaleType="centerCrop"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/imgUserProfile"
+                    android:layout_width="@dimen/_80sdp"
+                    android:layout_height="@dimen/_80sdp"
+                    android:src="@drawable/place_holder"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_margin="@dimen/_12sdp"
+                    android:scaleType="centerCrop"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="@dimen/_12sdp"
+                >
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tvUserProfile"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@string/change_profile_photo"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/_12sdp"
                 app:fontFamily="@font/poppins_light"
                 android:includeFontPadding="false"
                 android:textColor="@color/colorOptionText"
-                android:textSize="@dimen/_13ssp"/>
-            
+                android:textSize="@dimen/_13ssp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:layout_marginEnd="@dimen/_3sdp"/>
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tvUserUploadCoverPhoto"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/upload_cover_photo"
+                    android:layout_gravity="center_horizontal"
+                    app:fontFamily="@font/poppins_light"
+                    android:includeFontPadding="false"
+                    android:textColor="@color/colorOptionText"
+                    android:textSize="@dimen/_13ssp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:layout_marginStart="@dimen/_3sdp"/>
+            </LinearLayout>
             
             <LinearLayout
                 android:layout_width="match_parent"
