--- a/app/src/main/res/layout/fragment_manager_account.xml
+++ b/app/src/main/res/layout/fragment_manager_account.xml
@@ -28,6 +28,7 @@
                     android:layout_height="wrap_content">
 
                     <androidx.appcompat.widget.AppCompatImageView
+                        android:id="@+id/imgAccountCover"
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/_250sdp"
                         android:src="@drawable/dummy"
@@ -38,6 +39,7 @@
                         app:layout_constraintBottom_toBottomOf="parent"/>
 
                     <androidx.appcompat.widget.AppCompatImageView
+                        android:id="@+id/imgAccountLogout"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/logoutbutton"
@@ -55,11 +57,13 @@
                         android:padding="@dimen/_12sdp">
 
                         <de.hdodenhof.circleimageview.CircleImageView
+                            android:id="@+id/imgAccountProfile"
                             android:layout_width="@dimen/_80sdp"
                             android:layout_height="@dimen/_80sdp"
                             android:src="@drawable/dummy"/>
 
                         <androidx.appcompat.widget.AppCompatTextView
+                            android:id="@+id/tvAccountProfileName"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="User Name"
